--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ NETLIFY_URL="https://soft-malabi-a6eaf6.netlify.app"
 REMOTE_SERVER=http://localhost:4000
 SESSION_SECRET=super secret session phrase
 #MONGO_CONNECTION_STRING=mongodb://localhost:27017/kanbas
-MONGO_CONNECTION_STRING=mongodb://127.0.0.1:27017/kanbas
+MONGO_CONNECTION_STRING=mongodb+srv://ryan:Yanrujun990426@kanbas.qrena.mongodb.net/?retryWrites=true&w=majority&appName=Kanbas
